@@ -1,3 +1,6 @@
+Nov 12, 2019
+  -fixed spring IOT code (no longer displaying two 'null' lines when the pipeline is starting)
+
 Oct 24, 2019
   -discontinued use of rgd-pipelines library
   -replaced commons logging with log4j
